--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -51,4 +51,6 @@
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/locales/bootstrap-datepicker.es.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jQuery.print/1.4.1/jQuery.print.min.js'
