--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -19,6 +19,7 @@
           .col-xs-10
             %span
               %a.hint-link.expand(href="") Ampliar
+
         .row
           .col-xs-1
             %span.text-muted
@@ -33,7 +34,15 @@
               %i.fa.fa-sticky-note-o
           .col-xs-10
             %span
-              %a.hint-link#print(href="") Imprimir Receta
+              %a.hint-link#print(href="") Imprimir receta
+
+        .row
+          .col-xs-1
+            %span.text-muted
+              %i.fa.fa-sticky-note
+          .col-xs-10
+            %span
+              %a.hint-link.show-certificate(href="") Certificados
 
       .hint-item
         - if @patient.anamnesis.allergies?
