--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,6 +8,7 @@
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'
     = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker3.min.css'
+    = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   %body
