--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -19,6 +19,7 @@
               %select.form-control.input-sm#certificate
                 %option{ value: "simple" } Simple
                 %option{ value: "attendance" } Asistencia
+                %option{ value: "specialty" } Especialidad ORL
               %em.text-muted Selecciona un certificado
           .time-controls{ style: "display:none" }
             .form-group
