Add nasal bones fracture certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -20,6 +20,7 @@
                 %option{ value: "simple" } Simple
                 %option{ value: "attendance" } Asistencia
                 %option{ value: "specialty" } Especialidad ORL
+                %option{ value: "fracture" } Fractura de huesos propios nasales
               %em.text-muted Selecciona un certificado
           .time-controls{ style: "display:none" }
             .form-group
