Add rest certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -17,10 +17,11 @@
             %label.col-sm-2.control-label{ for: "certificate" } Certificado
             .col-md-6
               %select.form-control.input-sm#certificate
-                %option{ value: "simple" } Simple
                 %option{ value: "attendance" } Asistencia
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
+                %option{ value: "rest" } Reposo médico
+                %option{ value: "simple" } Simple
               %em.text-muted Selecciona un certificado
           .time-controls{ style: "display:none" }
             .form-group
