--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 23px;
 }
 
+.modal-header h4 {
+  padding-left: 8px;
+}
+
 input, textarea, select {
   text-transform: uppercase;
 }
