Refactor: Change time controls by attendance controls

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -24,7 +24,7 @@
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
               %em.text-muted Selecciona un certificado
-          .time-controls{ style: "display:none" }
+          .attendance-controls{ style: "display:none" }
             .form-group
               %label.col-sm-2.control-label{ for: "certificate_start_time" } Inicio
               .col-md-6
