Rename partial `_modal` to `_modal_consultation`

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -216,7 +216,7 @@
     = link_to "Cancelar", patients_path, class: "btn btn-default"
     = f.submit "Guardar", class: "btn btn-success"
 
-= render 'modal'
+= render 'modal_consultation'
 = render 'modal_certificates'
-= render 'hint'
 = render 'prescription'
+= render 'hint'
