Update print prescription icon

--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -31,7 +31,7 @@
         .row
           .col-xs-1
             %span.text-muted
-              %i.fa.fa-sticky-note-o
+              %i.fa.fa-print
           .col-xs-10
             %span
               %a.hint-link#print(href="") Imprimir receta
