--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -39,7 +39,7 @@
         .row
           .col-xs-1
             %span.text-muted
-              %i.fa.fa-sticky-note
+              %i.fa.fa-certificate
           .col-xs-10
             %span
               %a.hint-link.show-certificate(href="") Certificados
