Add protocol and epicrisis certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -23,6 +23,7 @@
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
+                %option{ value: "protocol" } Protocolo y epicrisis
               %em.text-muted Selecciona un certificado
           .attendance-controls{ style: "display:none" }
             .form-group
