Add audiological report

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -21,6 +21,7 @@
                 %option{ value: "surgery" } Cirugía
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
+                %option{ value: "audiological" } Informe Audiológico
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
                 %option{ value: "protocol" } Protocolo y epicrisis
