--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -19,6 +19,7 @@
               %select.form-control.input-sm#certificate
                 %option{ value: "attendance" } Asistencia
                 %option{ value: "surgery" } Cirugía
+                %option{ value: "consultation" } Consulta
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
                 %option{ value: "audiological" } Informe Audiológico
