--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -26,19 +26,26 @@
       = @patient.medical_history
 
 .row.pull-right
-  .col-md-12
+  .col-md-12.buttons
+    %a.btn.btn-primary(href = "#") Descargar historia
     = link_to "Nueva consulta", new_patient_consultation_path(@patient), class: "btn btn-success"
-
 .row
   .col-md-12
     %table.table.table-striped
       %thead
         %tr
-          %th.col-md-10 Consultas
-          %th.col-md-2
+          %th.col-sm-1
+            %input.check-all{ type: "checkbox" }
+          %th.col-sm-10
+            .row
+              .col-md-10.col-md-offset-2
+                Consultas
+          %th.col-sm-2
       %tbody
       - @consultations.each do |consultation|
         %tr
+          %td.checkbox-container
+            %input.check-consultation{ type: "checkbox", id: consultation.id }
           %td
             .row
               .col-md-10.col-md-offset-2
@@ -63,7 +70,19 @@
                   %span.semi-strong
                   = consultation.diagnostic_plan
           %td.text-right
-            = link_to "Editar", edit_patient_consultation_path(@patient, consultation), class: 'btn btn-primary btn-sm'
+            .btn-group
+              %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
+                                                              "aria-haspopup": "true",
+                                                              "data-toggle": "dropdown",
+                                                              type: "button" }
+                .span.text-primary
+                  %i.fa.fa-cog
+                  %span.caret
+              %ul.dropdown-menu.pull-right
+                %li
+                  = link_to "Editar", edit_patient_consultation_path(@patient, consultation)
+                %li
+                  = link_to "Descargar certificado", download_certificates_path(consultation_id: consultation.id, certificate_type: "consultation")
 
 .row
   .col-md-12.text-center
