Add settings controller
- Add bootstrap-editable dependency.
- Enable inline editing capabilities for setting.
- Add settings to menu.

--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -239,6 +239,10 @@ input[type="email"] {
   margin-left: 10px !important;
 }
 
+.editableform .form-control {
+  width: 50px;
+}
+
 #printable-prescription {
   display: none;
 }
