Compute medical history sequence on patient creation

--- a/app/views/patients/_form.haml
+++ b/app/views/patients/_form.haml
@@ -24,7 +24,7 @@
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm Historia
-            = f.text_field :medical_history, class: "form-control input-sm"
+            = f.text_field :medical_history, class: "form-control input-sm", readonly: true
 
       .row-fluid
         .form-group.col-md-6
