--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -25,10 +25,27 @@
     %span.semi-strong
       = @patient.medical_history
 
-.row
-  .col-md-12.text-right.buttons
-    %a.btn.btn-primary(href = "#") Descargar historia
+.row.hidden-xs
+  .col-md-12.text-right
+    %a.download-medical-history.btn.btn-primary(href = "#") Descargar historia
     = link_to "Nueva consulta", new_patient_consultation_path(@patient), class: "btn btn-success"
+
+.row.show-xs
+  .col-xs-12.text-right
+    .btn-group
+      %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
+                                                      "aria-haspopup": "true",
+                                                      "data-toggle": "dropdown",
+                                                      "type": "button" }
+        .span
+          %i.fa.fa-cogs
+          %span.caret
+      %ul.dropdown-menu.pull-right
+        %li
+          %a.download-medical-history(href = "#") Descargar historia
+        %li
+          = link_to "Nueva consulta", new_patient_consultation_path(@patient)
+
 .row
   .col-md-12
     %table.table.table-striped
@@ -74,7 +91,7 @@
               %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
                                                               "aria-haspopup": "true",
                                                               "data-toggle": "dropdown",
-                                                              type: "button" }
+                                                              "type": "button" }
                 .span.text-primary
                   %i.fa.fa-cog
                   %span.caret
