--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -25,12 +25,12 @@
     %span.semi-strong
       = @patient.medical_history
 
-.row.hidden-xs
+.row.hidden-sm.hidden-xs
   .col-md-12.text-right
     %a.download-medical-history.btn.btn-primary(href = "#") Descargar historia
     = link_to "Nueva consulta", new_patient_consultation_path(@patient), class: "btn btn-success"
 
-.row.show-xs
+.row.hidden-md.hidden-lg
   .col-xs-12.text-right
     .btn-group
       %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
