--- a/app/views/consultations/_prescription.haml
+++ b/app/views/consultations/_prescription.haml
@@ -6,26 +6,26 @@
       %table{ style: "width: 100%" }
         %tbody
           %tr
-            %td{ style: "text-align: right; padding-right: 1.3cm;" }
+            %td{ style: "text-align: right; padding-right: 0.5cm;" }
               {{currentDate}}
-            %td{ style: "text-align: right; padding-right: 2cm;" }
+            %td{ style: "text-align: right; padding-right: 1.7cm;" }
               {{currentDate}}
           %tr
             %td{ style: "padding-left: 1cm" }
               {{patientName}}
-            %td{ style: "padding-left: 2.7cm" }
+            %td{ style: "padding-left: 3.5cm" }
               {{patientName}}
 
   .row.body
     .col-md-12
       {{#hasPrescriptions}}
-      %table
+      %table{ style: "width: 100%" }
         %tbody
           {{#prescriptions}}
           %tr
             %td{ style: "width: 50%" }
               {{inscription}}
-            %td
+            %td{ style: "padding-left: 0.5cm" }
               {{{subscription}}}
           {{/prescriptions}}
       {{/hasPrescriptions}}
