Rename label for therapeutic plan to medical procedure

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -171,7 +171,7 @@
       .row-fluid
         .form-group.col-md-12
           .input-group
-            %span.input-group-addon.input-sm Terapéutico
+            %span.input-group-addon.input-sm Procedimiento médico
             = f.text_field :treatment_plan, class: "form-control input-sm"
       .row-fluid
         .form-group.col-md-12.prescriptions
