--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -27,6 +27,10 @@ input[type="email"] {
   color: #FFF;
 }
 
+.hint-title > .text-muted {
+  color: #999;
+}
+
 .panel > .panel-body > .row-fluid:last-child > .form-group {
   padding-bottom: 8px;
 }
