Update patient's age calculation to include years and months
- Update views and certificates accordingly.

--- a/app/views/application/_patient.haml
+++ b/app/views/application/_patient.haml
@@ -53,7 +53,7 @@
         .form-group.col-md-2
           .input-group
             %span.input-group-addon.input-sm Edad
-            %input.form-control.input-sm.colored.patient-age{ disabled: 'disabled', value: @patient.age }
+            %input.form-control.input-sm.colored.patient-age{ disabled: 'disabled', value: @patient.age.years }
         .form-group.col-md-4
           .input-group
             %span.input-group-addon.input-sm Estado Civil
