--- a/app/views/consultations/_modal_consultation.haml
+++ b/app/views/consultations/_modal_consultation.haml
@@ -20,7 +20,7 @@
 %script#consultation-header{ type: "x-tmpl-mustache" }
   {{patient.name}}
   %small
-    {{patient.age}} años
+    {{patient.age.years}} años
 
     {{#patient.isMale}}
     %i.fa.fa-male
