--- a/app/views/patients/special.haml
+++ b/app/views/patients/special.haml
@@ -14,7 +14,7 @@
             %strong
               %big= patient.name
               %span.text-muted
-                #{patient.age} años
+                #{patient.age.years} años
                 = gender_tag(patient)
           .col-xs-4
             .pull-right
