--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -9,7 +9,7 @@
         %h4.modal-title
           = @patient.name
           %small
-            #{@patient.age} años
+            #{@patient.age.years} años
             = gender_tag(@patient)
       .modal-body
         .form-horizontal
