Add OEA certificate

--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -22,9 +22,10 @@
                 %option{ value: "consultation" } Consulta
                 %option{ value: "specialty" } Especialidad ORL
                 %option{ value: "fracture" } Fractura de huesos propios nasales
-                %option{ value: "audiological" } Informe Audiológico
+                %option{ value: "audiological" } Informe audiológico
                 %option{ value: "rest" } Reposo médico
                 %option{ value: "simple" } Simple
+                %option{ value: "oea" } OEA
                 %option{ value: "protocol" } Protocolo y epicrisis
               %em.text-muted Selecciona un certificado
           .attendance-controls{ style: "display:none" }
