Show next appointment on consultations

--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -103,6 +103,7 @@ input[type="email"] {
 }
 
 .consultation-date,
+.consultation-next-appointment,
 .consultation-reason {
   padding-left: 8px;
 }
