--- a/app/views/consultations/_modal_consultation.haml
+++ b/app/views/consultations/_modal_consultation.haml
@@ -37,7 +37,12 @@
     .col-md-3
       %strong Fecha:
     .col-md-9
-      %big {{date}}
+      %span.semi-strong {{date}}
+  .row.consultation-next-appointment
+    .col-md-3
+      %strong Próxima cita:
+    .col-md-9
+      %span.semi-strong {{next_appointment}}
   .row.consultation-reason
     .col-md-3
       %strong Motivo de consulta:
