Fix: Show next appointment date on consultations index

--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -112,7 +112,7 @@
                   %span.semi-strong.text-muted Próxima cita
                 .col-md-10
                   %span.semi-strong
-                  = consultation.created_at.strftime("%b %d, %Y")
+                  = consultation.next_appointment.strftime("%b %d, %Y")
           %td.text-right
             .btn-group
               %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
