Ease patient's information edition from consultation

--- a/app/views/anamneses/_form.haml
+++ b/app/views/anamneses/_form.haml
@@ -33,5 +33,5 @@
           = f.text_area :family_history, class: "form-control input-sm"
 
   .row-fluid
-    = link_to "Cancelar", patients_path, class: "btn btn-default"
+    = link_to "Cancelar", @referer_location || patients_path, class: "btn btn-default"
     = f.submit "Guardar", class: "btn btn-success"
