--- a/app/views/consultations/_modal_certificates.haml
+++ b/app/views/consultations/_modal_certificates.haml
@@ -65,4 +65,7 @@
                 %em.text-muted Costo de la cirugía (en dólares)
       .modal-footer
         %button.btn.btn-default{ "data-dismiss": "modal" } Cerrar
-        = link_to "Descargar certificado", download_certificates_path(consultation_id: @consultation.id, certificate_type: "simple"), class: 'btn btn-primary'
+        = link_to t('certificates.button.download'),
+          download_certificates_path(consultation_id: @consultation.id, certificate_type: "simple"),
+          class: 'btn btn-primary',
+          data: { turbolinks: false }
