--- a/app/views/application/_patient.haml
+++ b/app/views/application/_patient.haml
@@ -10,11 +10,11 @@
             - if (@consultation && @consultation.new_record?) || @anamnesis
               %input.form-control.input-sm.colored#current_date{ disabled: 'disabled', value: Date.today }
             - else
-              %input.form-control.input-sm.colored#current_date{ disabled: 'disabled', value: @consultation.created_at.strftime("%Y-%m-%d") }
+              %input.form-control.input-sm.colored#current_date{ disabled: 'disabled', value: @consultation.date }
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm Fecha Nacimiento
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.birthdate.strftime("%Y-%m-%d") }
+            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.formatted_birthdate }
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm # Cédula
