--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -219,7 +219,7 @@
             - if @consultation.new_record? || @consultation.next_appointment.nil?
               = f.text_field :next_appointment, class: "form-control input-sm"
             - else
-              = f.text_field :next_appointment, value: @consultation.next_appointment.strftime("%Y-%m-%d"), class: "form-control input-sm"
+              = f.text_field :next_appointment, value: @consultation.next_appointment_date, class: "form-control input-sm"
 
   .row-fluid
     = link_to "Cancelar", patient_consultations_path(@patient), class: "btn btn-default"
